# libNmeaMulticast

./: .cproject  .gitlab-ci.yml  .project  CMakeLists.txt  Doxyfile.in  README.md  Version.h.in
include/: MulticastUdp.h  MulticastUdpListener.h  NmeaMulticastUdp.h  NmeaMulticastUdpListener.h
src/: MulticastUdp.cpp  NmeaMulticastUdp.cpp  NmeaMulticastUdp.h
test/: test.cpp
